--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 node_modules/
 test/coverage/
 coverage/
-src/**/site/
-theme.config
-semantic.json
 tasks/**/oauth.js
 
 # Numerous always-ignore extensions
@@ -34,3 +31,5 @@ nbproject
 *.sublime-project
 *.sublime-workspace
 .build*
+sui-docs
+docs
