--- a/src/theme.config
+++ b/src/theme.config
@@ -26,7 +26,7 @@
 @container  : 'default';
 /* divider    : 'default'; */
 /* flag       : 'default'; */
-/* header     : 'default'; */
+@header     : 'default';
 @icon       : 'material';
 /* image      : 'default'; */
 @input      : 'default';
