Enhancement: Add checkbox, form, and message

--- a/src/theme.config
+++ b/src/theme.config
@@ -40,16 +40,16 @@
 
 /* Collections */
 /* breadcrumb : 'default'; */
-/* form       : 'default'; */
+@form       : 'default';
 @grid       : 'default';
 @menu       : 'default';
-/* message    : 'default'; */
+@message    : 'default';
 @table      : 'default';
 
 /* Modules */
 /* accordion  : 'default'; */
 @calendar   : 'default';
-/* checkbox   : 'default'; */
+@checkbox   : 'default';
 /* dimmer     : 'default'; */
 @dropdown   : 'default';
 /* embed      : 'default'; */
