Enhancement: Add modal

--- a/src/theme.config
+++ b/src/theme.config
@@ -53,7 +53,7 @@
 /* dimmer     : 'default'; */
 @dropdown   : 'default';
 /* embed      : 'default'; */
-/* modal      : 'default'; */
+@modal      : 'default';
 /* nag        : 'default'; */
 @popup      : 'default';
 /* progress   : 'default'; */
