Enhancement: Add Dimmer

--- a/src/theme.config
+++ b/src/theme.config
@@ -50,7 +50,7 @@
 /* accordion  : 'default'; */
 @calendar   : 'default';
 @checkbox   : 'default';
-/* dimmer     : 'default'; */
+@dimmer     : 'default';
 @dropdown   : 'default';
 /* embed      : 'default'; */
 @modal      : 'default';
