Enhancement: Add image

--- a/src/theme.config
+++ b/src/theme.config
@@ -28,7 +28,7 @@
 /* flag       : 'default'; */
 @header     : 'default';
 @icon       : 'material';
-/* image      : 'default'; */
+@image      : 'default';
 @input      : 'default';
 @label      : 'default';
 @list       : 'default';
