Enhancement: Add loader and divider

--- a/src/theme.config
+++ b/src/theme.config
@@ -24,7 +24,7 @@
 /* Elements */
 @button     : 'default';
 @container  : 'default';
-/* divider    : 'default'; */
+@divider    : 'default';
 /* flag       : 'default'; */
 @header     : 'default';
 @icon       : 'material';
@@ -32,7 +32,7 @@
 @input      : 'default';
 @label      : 'default';
 @list       : 'default';
-/* loader     : 'default'; */
+@loader     : 'default';
 /* rail       : 'default'; */
 /* reveal     : 'default'; */
 /* segment    : 'default'; */
