Enhancement: Add statistic

--- a/src/theme.config
+++ b/src/theme.config
@@ -71,7 +71,7 @@
 /* comment    : 'default'; */
 /* feed       : 'default'; */
 @item       : 'default';
-/* statistic  : 'default'; */
+@statistic  : 'default';
 
 /*******************************
             Folders
